Fix janky drawer flicker when closing it

--- a/drawer.css
+++ b/drawer.css
@@ -1,5 +1,5 @@
 /*
-  Drawer v0.2.1
+  Drawer v0.2.2
   ==============
   Copyright (c) Dom Christie 2013 */
 
@@ -8,6 +8,11 @@
 body {
   margin: 0;
   padding: 0;
+
+  /* **Important**: prevent transition flickering */
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  backface-visibility: hidden;
 }
 
 /*
@@ -51,11 +56,7 @@ body {
   -webkit-transition: margin-left .2s, -webkit-transform .2s;
   transition: margin-left .2s, transform .2s;
 
-  /* **Important**: prevent transition flickering
-    (see http://stackoverflow.com/a/3921870/783009) */
-  -webkit-backface-visibility: hidden;
-  -moz-backface-visibility: hidden;
-  backface-visibility: hidden;
+
 }
 
 .drawer-open .drawer-butt {
